--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,13 +19,25 @@
     box-sizing: border-box;
 }
 
-a {
-    color: var(--main-color);
+nav a {
+    display: block;
+    color: var(--accent-color);
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: var(--footer-bg);
+}
+
+nav a:hover {
+    background-color: brown;
 }
 
 nav {
     background-color: var(--nav-bg);
     padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 main {
@@ -35,8 +47,17 @@ main {
     color: var(--text-color);
 }
 
+main img {
+    width: 19rem;
+    height: auto;
+    margin: 1rem 0 1rem 1rem;
+    float: right;
+}
+
 h1 {
     color: var(--main-color);
+    padding-bottom: 2px;
+    border-bottom: 2px solid var(--main-color);
 }
 
 aside {
@@ -52,20 +73,23 @@ aside img {
 
 aside h2 {
     position: absolute;
-    top: 70px;
-    left: 165px;
-}
-
-main img {
-    width: 19rem;
-    height: auto;
-    margin: 1rem 0 1rem 1rem;
-    float: right;
+    top: 5rem;
+    left: 3rem;
 }
 
 p {
     padding: 1rem;
     color: var(--text-color);
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: auto 300px;
 }
 
 footer {
