--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -124,7 +124,7 @@ footer p {
 /* Hero Section */
 .hero {
   position: relative;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .hero img {
@@ -145,12 +145,9 @@ footer p {
 }
 
 .hero article {
-  position: absolute;
-  bottom: -50px;
-  left: 20px;
-  right: 20px;
   background-color: rgba(255, 255, 255, 0.9);
   padding: 16px;
+  margin: 80px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
